@@ -1,5 +1,5 @@
 chrome
-evt
+evtx
 exif
 ff_bookmark
 firefox3
